<resources>
    <string name="app_name">App</string>
    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="tinggi">Tinggi</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result</string>
    <string name="move_activity">Move Activity</string>
    <string name="move_activity_with_data">Move Activity With Data</string>
    <string name="move_activity_with_object">Move Activity With Object</string>
    <string name="move_activity_to_get_result">Move Activity to Get Result</string>
    <string name="dial_number">Dial a Number</string>
    <string name="this_is_activity_empty">This is Activity Empty</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="identitas_diri">Identitas Diri</string>
    <string name="choose_number">Please Choose One Number</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="submit">Submit</string>
</resources>
