<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/panjang"/>
        <EditText
                android:id="@+id/edit_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:lines="1"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lebar"/>

        <EditText
                android:id="@+id/edit_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:lines="1"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tinggi"/>
        <EditText
                android:id="@+id/edit_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:lines="1"/>

        <Button
                android:id="@+id/btn_calculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                style="@style/Widget.AppCompat.Button.Colored"/>

        <TextView
                android:id="@+id/txt_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/result"
                android:textStyle="bold"
                android:textSize="24sp"/>

        <Button
                android:id="@+id/btn_move_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/move_activity"
                style="@style/Widget.AppCompat.Button.Colored"/>
        <Button
                android:id="@+id/btn_move_activity_with_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/move_activity_with_data"
                style="@style/Widget.AppCompat.Button.Colored"/>
        <Button
                android:id="@+id/btn_move_activity_with_object"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/move_activity_with_object"
                style="@style/Widget.AppCompat.Button.Colored"/>
        <Button
                android:id="@+id/btn_move_to_dial_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dial_number"
                style="@style/Widget.AppCompat.Button.Colored"/>
        <Button
                android:id="@+id/btn_move_activity_to_get_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/move_activity_to_get_result"
                style="@style/Widget.AppCompat.Button.Colored"/>
        <TextView
                android:id="@+id/txt_result_from_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/result"
                android:textSize="24sp"
                android:textStyle="bold"/>
    </LinearLayout>

</ScrollView>