<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MoveWithDataObjectActivity">

    <TextView
            android:id="@+id/txt_identitas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/identitas_diri"
            android:textSize="16sp"
            android:textStyle="bold"/>

    <TextView
            android:id="@+id/txt_receiver_data_obj_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txt_identitas"
            app:layout_constraintStart_toStartOf="@id/txt_identitas"
            app:layout_constraintEnd_toEndOf="@id/txt_identitas"
            android:layout_marginTop="8dp"
            tools:text="@string/name"
            android:textSize="14sp"/>
    <TextView
            android:id="@+id/txt_receiver_data_obj_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_receiver_data_obj_name"
            app:layout_constraintStart_toStartOf="@+id/txt_receiver_data_obj_name"
            app:layout_constraintEnd_toEndOf="@+id/txt_receiver_data_obj_name"
            tools:text="@string/age"
            android:textSize="14sp"/>
    <TextView
            android:id="@+id/txt_receiver_data_obj_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_receiver_data_obj_age"
            app:layout_constraintStart_toStartOf="@id/txt_receiver_data_obj_age"
            app:layout_constraintEnd_toEndOf="@id/txt_receiver_data_obj_age"
            tools:text="@string/email"
            android:textSize="14sp"/>
    <TextView
            android:id="@+id/txt_receiver_data_obj_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/txt_receiver_data_obj_email"
            app:layout_constraintStart_toStartOf="@id/txt_receiver_data_obj_email"
            app:layout_constraintEnd_toEndOf="@id/txt_receiver_data_obj_email"
            tools:text="@string/address"
            android:textSize="14sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>